[project]
name = "ttflow"
version = "0.5.8"
description = "simple workflow engine"
authors = [{ name = "moajo", email = "mimirosiasd@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fire>=0.5.0",
    "boto3>=1.26.42",
    "boto3-stubs[essential]>=1.26.42",
    "dacite>=1.7.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.8",
    "moto[s3]>=5.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ttflow"]

[tool.pytest.ini_options]
markers = ["network"]
addopts = ["-m", "not network"]

[tool.coverage.run]
source = ["ttflow"]

[tool.coverage.report]
show_missing = true
fail_under = 0
